Showcase with overlay, categories and button styles

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Showcase -->
+    <header id="showcase">
+        <div class="container">
+            <div class="showcase-container">
+                <div class="showcase-content">
+                    <div class="category category-sports">Sports</div>
+                    <h1>Some Sports Article</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, natus tenetur odio vero quod quisquam nesciunt magni sed fugit ipsum nemo quibusdam. Cumque impedit temporibus magnam sunt? Blanditiis, dolorem suscipit?</p>
+                    <a href="article.html" class="btn btn-primary">Read More</a>
+                </div>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
