--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>NewsGrid | Latest News</title>
 </head>
 <body>
+    <!-- Navbar -->
     <nav id="main-nav">
         <div class="container">
             <img src="img/logo.png" alt="NewsGrid" class="logo">
